acceptance/tests/fixtures/cases/api-gateways/gateway/gateway.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: consul
  listeners:
  - protocol: HTTPS
    port: 8080
    name: https
    tls:
      certificateRefs:
      - name: "certificate"
        namespace: "default"
    allowedRoutes:
      namespaces:
        from: "All"
